@@ -23,7 +23,7 @@ ifdef LISP_FEATURE_SB_THREAD
   OS_LIBS += -lpthread
 endif
 ifdef LISP_FEATURE_SB_CORE_COMPRESSION
-  OS_LIBS += -lz
+  OS_LIBS += -lzstd
 endif
 CFLAGS += -std=gnu99
 ifdef LISP_FEATURE_LARGEFILE
