@@ -19,7 +19,7 @@ ARCH_SRC = ppc-arch.c
 OS_SRC = bsd-os.c ppc-bsd-os.c
 
 ifdef LISP_FEATURE_SB_CORE_COMPRESSION
-  OS_LIBS += -lz
+  OS_LIBS += -lzstd
 endif
 
 GC_SRC = fullcgc.c gencgc.c traceroot.c
