@@ -16,7 +16,7 @@ ARCH_SRC = x86-64-arch.c
 OS_SRC = bsd-os.c x86-64-bsd-os.c
 OS_LIBS = # -ldl
 ifdef LISP_FEATURE_SB_CORE_COMPRESSION
-  OS_LIBS += -lz
+  OS_LIBS += -lzstd
 endif
 ifdef HAVE_LIBUNWIND
   OS_LIBS += -lunwind
