@@ -37,7 +37,7 @@ ifdef LISP_FEATURE_SB_THREAD
 endif
 
 ifdef LISP_FEATURE_SB_CORE_COMPRESSION
-  OS_LIBS += -lz
+  OS_LIBS += -lzstd
 endif
 
 ifdef HAVE_LIBUNWIND
