@@ -14,7 +14,7 @@ ARCH_SRC = x86-64-arch.c
 OS_SRC = sunos-os.c x86-64-sunos-os.c
 OS_LIBS= -ldl -lsocket -lnsl -lrt
 ifdef LISP_FEATURE_SB_CORE_COMPRESSION
-  OS_LIBS += -lz
+  OS_LIBS += -lzstd
 endif
 
 ifdef LISP_FEATURE_IMMOBILE_SPACE
