@@ -18,7 +18,7 @@ LINKFLAGS += -Wl,--export-dynamic
 OS_SRC = bsd-os.c x86-bsd-os.c
 OS_LIBS = # -ldl
 ifdef LISP_FEATURE_SB_CORE_COMPRESSION
-  OS_LIBS += -lz
+  OS_LIBS += -lzstd
 endif
 
 GC_SRC = fullcgc.c gencgc.c traceroot.c
