@@ -20,7 +20,7 @@ OS_SRC = sunos-os.c x86-sunos-os.c
 OS_LIBS= -ldl -lsocket -lnsl -lrt
 
 ifdef LISP_FEATURE_SB_CORE_COMPRESSION
-  OS_LIBS += -lz
+  OS_LIBS += -lzstd
 endif
 
 GC_SRC= fullcgc.c gencgc.c traceroot.c
