@@ -2,7 +2,7 @@
 
 lisp="../../run-sbcl.sh $SBCL_ARGS"
 m_arg=`$lisp --eval '(progn #+x86 (princ " -m32"))' --quit`
-libs=`$lisp --eval '(progn #+sb-core-compression (princ " -lz"))' --quit`
+libs=`$lisp --eval '(progn #+sb-core-compression (princ " -lzstd"))' --quit`
 
 # Insert CFLAGS in case they contain -fsanitize=memory, for example.
 # Specify that some symbols are undefined so that the complete
